<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    tools:context=".ui.register.view.RegisterActivity">

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout50"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout50"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout50"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin30"
        android:fontFamily="@font/comicbd"
        android:text="@string/username"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comicbd"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comicbd"
        android:text="@string/password"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin50"
        android:layout_marginEnd="@dimen/margin80"
        android:fontFamily="@font/comicbd"
        android:text="@string/reset"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin30"
        android:fontFamily="@font/comicbd"
        android:text="@string/register"
        android:textColor="@color/textColor"
        android:background="@drawable/bg_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_reset" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tittle"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin13"
        android:layout_marginEnd="@dimen/margin10"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toTopOf="@+id/edt_password"
        app:srcCompat="@drawable/ic_visibility_off_black_24dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/comicbd"
        android:text="@string/register_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ProgressBar
        android:id="@+id/pb_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>