<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    tools:context=".ui.editprofile.view.EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/layout150"
        android:layout_height="@dimen/layout150"
        android:layout_marginTop="@dimen/margin24"
        android:src="@drawable/blank_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_edit_photo"
        android:layout_width="@dimen/layout40"
        android:layout_height="@dimen/layout40"
        android:layout_marginBottom="@dimen/margin10"
        android:padding="@dimen/padding5"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:civ_circle_background_color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin80"
        android:fontFamily="@font/comicbd"
        android:text="@string/data_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin50"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout50"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin16"
        android:background="@drawable/bg_edt"
        android:hint="@string/email"
        android:paddingStart="@dimen/padding8"
        android:paddingTop="@dimen/padding13"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout50"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/margin16"
        android:background="@drawable/bg_edt"
        android:hint="@string/username"
        android:paddingStart="@dimen/padding8"
        android:paddingTop="@dimen/padding13"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:text="@string/username"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin50"
        android:background="@drawable/bg_btn"
        android:text="@string/save"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_edit_profile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toTopOf="@+id/tv_email"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageView
        android:id="@+id/iv_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/tv_username"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

</androidx.constraintlayout.widget.ConstraintLayout>